// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`causes styles with lint to log errors 1`] = `
<h1
  className="indextest__Title-anlvrb-0 ImrkY"
>
  Who wrote these styles anyway??
</h1>
`;

exports[`styles without lint log nothing 1`] = `
<h1
  className="indextest__Title-anlvrb-1 betQCg"
>
  Who wrote these styles anyway??
</h1>
`;
